--- a/example.env
+++ b/example.env
@@ -1,5 +1,8 @@
-# Database
-DATABASE_URL=postgresql://neondb_owner:PASSWORD@ep-floral-feather-a1g1olel-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+# Database (GCP Cloud SQL PostgreSQL)
+# Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE?sslmode=require
+# For Cloud SQL with private IP: postgresql://USER:PASSWORD@PRIVATE_IP/DATABASE
+# For Cloud SQL with public IP + SSL: include sslmode=require
+DATABASE_URL=postgresql://postgres:PASSWORD@127.0.0.1:5432/phishguard?sslmode=require
 
 # Clerk (Backend)
 CLERK_JWKS_URL=https://clerk.example.com/.well-known/jwks.json
@@ -15,5 +18,10 @@ BATCH_LIMIT=10
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_replace_me
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
-# API CORS
+# API CORS (comma-separated list of allowed origins)
+# WARNING: Do not use "*" in production - specify exact origins
 CORS_ALLOW_ORIGINS=http://localhost:3000
+
+# Development Mode
+# Set to "true" to enable insecure JWT fallback (NEVER in production!)
+DEV_MODE=false
